--- a/house-app/package.json
+++ b/house-app/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.11.1",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-google-maps/api": "^2.20.5",
     "class-variance-authority": "^0.7.1",
@@ -18,9 +22,11 @@
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-places-autocomplete": "^4.1.0",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
